GtkFileChooserButton: Also emit 'file-set' when changing the selection through the combo box

https://bugzilla.gnome.org/show_bug.cgi?id=696498